--- a/examples/outranking.ipynb
+++ b/examples/outranking.ipynb
@@ -6,14 +6,17 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "attempted relative import with no known parent package",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmilp_electre\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrelations\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PositivePreference\n",
-      "\u001b[1;31mImportError\u001b[0m: attempted relative import with no known parent package"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\user\\Documents\\Programming\\Projects\\University\\Master\\milp-electre\\venv\\lib\\site-packages\\mcda\\core\\relations.py:9: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  from pandas import DataFrame, Series\n"
      ]
     }
    ],
@@ -25,21 +28,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Could not find a version that satisfies the requirement milp_electre (from versions: none)\n",
-      "ERROR: No matching distribution found for milp_electre\n",
-      "\n",
-      "[notice] A new release of pip is available: 23.0.1 -> 24.0\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install milp_electre\n"
+    "p = PositivePreference(3,2)\n",
+    "\n"
    ]
   },
   {
