change imports in examples

--- a/examples/outranking.ipynb
+++ b/examples/outranking.ipynb
@@ -21,7 +21,7 @@
     }
    ],
    "source": [
-    "from milp_electre.core.relations import PositivePreference\n"
+    "from mcdalp.core.relations import PositivePreference\n"
    ]
   },
   {
