--- a/examples/score_tables.ipynb
+++ b/examples/score_tables.ipynb
@@ -43,7 +43,7 @@
    ],
    "source": [
     "from helpers import print_scoretable\n",
-    "from milp_electre.core.const import DEFAULT_SCORETABLE\n",
+    "from mcdalp.core.const import DEFAULT_SCORETABLE\n",
     "\n",
     "print_scoretable(DEFAULT_SCORETABLE)"
    ]
@@ -76,7 +76,7 @@
     }
    ],
    "source": [
-    "from milp_electre.core.score import Score\n",
+    "from mcdalp.core.score import Score\n",
     "\n",
     "\n",
     "score = Score()\n",
@@ -113,8 +113,8 @@
     }
    ],
    "source": [
-    "from milp_electre.core.score import Score\n",
-    "from milp_electre.core.relations import PositivePreference, NegativePreference, Indifference, Incomparible\n",
+    "from mcdalp.core.score import Score\n",
+    "from mcdalp.core.relations import PositivePreference, NegativePreference, Indifference, Incomparible\n",
     "\n",
     "my_new_scoretable = {\n",
     "    PositivePreference: {\n",
