--- a/examples/stochastic.ipynb
+++ b/examples/stochastic.ipynb
@@ -23,11 +23,11 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "from milp_electre.core.relations import PositivePreference, NegativePreference, Indifference, Incomparible\n",
-    "from milp_electre.core.credibility import StochasticCredibilityMatrix\n",
-    "from milp_electre.core.score import Score\n",
-    "from milp_electre.core.visualize.graph import Graph\n",
-    "from milp_electre.outranking.stochastic import StochasticOutranking"
+    "from mcdalp.core.relations import PositivePreference, NegativePreference, Indifference, Incomparible\n",
+    "from mcdalp.core.credibility import StochasticCredibilityMatrix\n",
+    "from mcdalp.core.score import Score\n",
+    "from mcdalp.core.visualize.graph import Graph\n",
+    "from mcdalp.outranking.stochastic import StochasticOutranking"
    ]
   },
   {
