--- a/examples/valued.ipynb
+++ b/examples/valued.ipynb
@@ -8,10 +8,10 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "from milp_electre.core.credibility import ValuedCredibilityMatrix\n",
-    "from milp_electre.core.score import Score\n",
-    "from milp_electre.core.visualize.graph import Graph\n",
-    "from milp_electre.outranking.valued import ValuedOutranking"
+    "from mcdalp.core.credibility import ValuedCredibilityMatrix\n",
+    "from mcdalp.core.score import Score\n",
+    "from mcdalp.core.visualize.graph import Graph\n",
+    "from mcdalp.outranking.valued import ValuedOutranking"
    ]
   },
   {
