--- a/examples/crisp.ipynb
+++ b/examples/crisp.ipynb
@@ -23,10 +23,10 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "from milp_electre.core.credibility import CredibilityMatrix\n",
-    "from milp_electre.core.score import Score\n",
-    "from milp_electre.core.visualize.graph import Graph\n",
-    "from milp_electre.outranking.crisp import CrispOutranking"
+    "from mcdalp.core.credibility import CredibilityMatrix\n",
+    "from mcdalp.core.score import Score\n",
+    "from mcdalp.core.visualize.graph import Graph\n",
+    "from mcdalp.outranking.crisp import CrispOutranking"
    ]
   },
   {
@@ -1124,7 +1124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
