--- a/examples/relations.ipynb
+++ b/examples/relations.ipynb
@@ -28,7 +28,7 @@
     }
    ],
    "source": [
-    "from milp_electre.core.relations import PositivePreference, NegativePreference, Indifference, Incomparible\n",
+    "from mcdalp.core.relations import PositivePreference, NegativePreference, Indifference, Incomparible\n",
     "\n",
     "pos_pref = PositivePreference(0,1)\n",
     "neg_pref = NegativePreference(1,0)\n",
