--- a/examples/crisp.ipynb
+++ b/examples/crisp.ipynb
@@ -4,22 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\user\\Documents\\Programming\\Projects\\University\\Master\\milp-electre\\venv\\lib\\site-packages\\mcda\\core\\relations.py:9: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  from pandas import DataFrame, Series\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -96,7 +81,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x29cb20625c0>"
+       "<graphviz.graphs.Digraph at 0x2769bb0b590>"
       ]
      },
      "execution_count": 2,
