add graph visualization inside Outranking class

--- a/examples/crisp.ipynb
+++ b/examples/crisp.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,16 +41,7 @@
       "OrderedDict([('Weak_preference__0_1_', 1*p_0_1 + 1*p_1_0 + -1 >= 0), ('Incomparability__0_1_', -1*p_0_1 + -1*p_1_0 + 1*z_0_1 + 1 = 0), ('Weak_preference__0_2_', 1*p_0_2 + 1*p_2_0 + -1 >= 0), ('Incomparability__0_2_', -1*p_0_2 + -1*p_2_0 + 1*z_0_2 + 1 = 0), ('Weak_preference__1_0_', 1*p_0_1 + 1*p_1_0 + -1 >= 0), ('Incomparability__1_0_', -1*p_0_1 + -1*p_1_0 + 1*z_1_0 + 1 = 0), ('Weak_preference__1_2_', 1*p_1_2 + 1*p_2_1 + -1 >= 0), ('Incomparability__1_2_', -1*p_1_2 + -1*p_2_1 + 1*z_1_2 + 1 = 0), ('Weak_preference__2_0_', 1*p_0_2 + 1*p_2_0 + -1 >= 0), ('Incomparability__2_0_', -1*p_0_2 + -1*p_2_0 + 1*z_2_0 + 1 = 0), ('Weak_preference__2_1_', 1*p_1_2 + 1*p_2_1 + -1 >= 0), ('Incomparability__2_1_', -1*p_1_2 + -1*p_2_1 + 1*z_2_1 + 1 = 0), ('Transitivity__0_1_2_', 1*p_0_1 + -1*p_0_2 + -1*p_2_1 + 1.5 >= 0), ('Transitivity__0_2_1_', -1*p_0_1 + 1*p_0_2 + -1*p_1_2 + 1.5 >= 0), ('Transitivity__1_0_2_', 1*p_1_0 + -1*p_1_2 + -1*p_2_0 + 1.5 >= 0), ('Transitivity__1_2_0_', -1*p_0_2 + -1*p_1_0 + 1*p_1_2 + 1.5 >= 0), ('Transitivity__2_0_1_', -1*p_1_0 + 1*p_2_0 + -1*p_2_1 + 1.5 >= 0), ('Transitivity__2_1_0_', -1*p_0_1 + -1*p_2_0 + 1*p_2_1 + 1.5 >= 0)])\n",
       "OrderedDict([('Weak_preference__0_1_', 1*p_0_1 + 1*p_1_0 + -1 >= 0), ('Incomparability__0_1_', -1*p_0_1 + -1*p_1_0 + 1*z_0_1 + 1 = 0), ('Weak_preference__0_2_', 1*p_0_2 + 1*p_2_0 + -1 >= 0), ('Incomparability__0_2_', -1*p_0_2 + -1*p_2_0 + 1*z_0_2 + 1 = 0), ('Weak_preference__1_0_', 1*p_0_1 + 1*p_1_0 + -1 >= 0), ('Incomparability__1_0_', -1*p_0_1 + -1*p_1_0 + 1*z_1_0 + 1 = 0), ('Weak_preference__1_2_', 1*p_1_2 + 1*p_2_1 + -1 >= 0), ('Incomparability__1_2_', -1*p_1_2 + -1*p_2_1 + 1*z_1_2 + 1 = 0), ('Weak_preference__2_0_', 1*p_0_2 + 1*p_2_0 + -1 >= 0), ('Incomparability__2_0_', -1*p_0_2 + -1*p_2_0 + 1*z_2_0 + 1 = 0), ('Weak_preference__2_1_', 1*p_1_2 + 1*p_2_1 + -1 >= 0), ('Incomparability__2_1_', -1*p_1_2 + -1*p_2_1 + 1*z_2_1 + 1 = 0), ('Transitivity__0_1_2_', 1*p_0_1 + -1*p_0_2 + -1*p_2_1 + 1.5 >= 0), ('Transitivity__0_2_1_', -1*p_0_1 + 1*p_0_2 + -1*p_1_2 + 1.5 >= 0), ('Transitivity__1_0_2_', 1*p_1_0 + -1*p_1_2 + -1*p_2_0 + 1.5 >= 0), ('Transitivity__1_2_0_', -1*p_0_2 + -1*p_1_0 + 1*p_1_2 + 1.5 >= 0), ('Transitivity__2_0_1_', -1*p_1_0 + 1*p_2_0 + -1*p_2_1 + 1.5 >= 0), ('Transitivity__2_1_0_', -1*p_0_1 + -1*p_2_0 + 1*p_2_1 + 1.5 >= 0), ('_C1', 1*p_0_1 + 1*p_0_2 + 1*p_1_2 + -2 <= 0)])\n",
       "OrderedDict([('Weak_preference__0_1_', 1*p_0_1 + 1*p_1_0 + -1 >= 0), ('Incomparability__0_1_', -1*p_0_1 + -1*p_1_0 + 1*z_0_1 + 1 = 0), ('Weak_preference__0_2_', 1*p_0_2 + 1*p_2_0 + -1 >= 0), ('Incomparability__0_2_', -1*p_0_2 + -1*p_2_0 + 1*z_0_2 + 1 = 0), ('Weak_preference__1_0_', 1*p_0_1 + 1*p_1_0 + -1 >= 0), ('Incomparability__1_0_', -1*p_0_1 + -1*p_1_0 + 1*z_1_0 + 1 = 0), ('Weak_preference__1_2_', 1*p_1_2 + 1*p_2_1 + -1 >= 0), ('Incomparability__1_2_', -1*p_1_2 + -1*p_2_1 + 1*z_1_2 + 1 = 0), ('Weak_preference__2_0_', 1*p_0_2 + 1*p_2_0 + -1 >= 0), ('Incomparability__2_0_', -1*p_0_2 + -1*p_2_0 + 1*z_2_0 + 1 = 0), ('Weak_preference__2_1_', 1*p_1_2 + 1*p_2_1 + -1 >= 0), ('Incomparability__2_1_', -1*p_1_2 + -1*p_2_1 + 1*z_2_1 + 1 = 0), ('Transitivity__0_1_2_', 1*p_0_1 + -1*p_0_2 + -1*p_2_1 + 1.5 >= 0), ('Transitivity__0_2_1_', -1*p_0_1 + 1*p_0_2 + -1*p_1_2 + 1.5 >= 0), ('Transitivity__1_0_2_', 1*p_1_0 + -1*p_1_2 + -1*p_2_0 + 1.5 >= 0), ('Transitivity__1_2_0_', -1*p_0_2 + -1*p_1_0 + 1*p_1_2 + 1.5 >= 0), ('Transitivity__2_0_1_', -1*p_1_0 + 1*p_2_0 + -1*p_2_1 + 1.5 >= 0), ('Transitivity__2_1_0_', -1*p_0_1 + -1*p_2_0 + 1*p_2_1 + 1.5 >= 0), ('_C1', 1*p_0_1 + 1*p_0_2 + 1*p_1_2 + -2 <= 0), ('_C2', 1*p_0_1 + 1*p_2_0 + 1*p_2_1 + -2 <= 0)])\n",
-      "OrderedDict([('Weak_preference__0_1_', 1*p_0_1 + 1*p_1_0 + -1 >= 0), ('Incomparability__0_1_', -1*p_0_1 + -1*p_1_0 + 1*z_0_1 + 1 = 0), ('Weak_preference__0_2_', 1*p_0_2 + 1*p_2_0 + -1 >= 0), ('Incomparability__0_2_', -1*p_0_2 + -1*p_2_0 + 1*z_0_2 + 1 = 0), ('Weak_preference__1_0_', 1*p_0_1 + 1*p_1_0 + -1 >= 0), ('Incomparability__1_0_', -1*p_0_1 + -1*p_1_0 + 1*z_1_0 + 1 = 0), ('Weak_preference__1_2_', 1*p_1_2 + 1*p_2_1 + -1 >= 0), ('Incomparability__1_2_', -1*p_1_2 + -1*p_2_1 + 1*z_1_2 + 1 = 0), ('Weak_preference__2_0_', 1*p_0_2 + 1*p_2_0 + -1 >= 0), ('Incomparability__2_0_', -1*p_0_2 + -1*p_2_0 + 1*z_2_0 + 1 = 0), ('Weak_preference__2_1_', 1*p_1_2 + 1*p_2_1 + -1 >= 0), ('Incomparability__2_1_', -1*p_1_2 + -1*p_2_1 + 1*z_2_1 + 1 = 0), ('Transitivity__0_1_2_', 1*p_0_1 + -1*p_0_2 + -1*p_2_1 + 1.5 >= 0), ('Transitivity__0_2_1_', -1*p_0_1 + 1*p_0_2 + -1*p_1_2 + 1.5 >= 0), ('Transitivity__1_0_2_', 1*p_1_0 + -1*p_1_2 + -1*p_2_0 + 1.5 >= 0), ('Transitivity__1_2_0_', -1*p_0_2 + -1*p_1_0 + 1*p_1_2 + 1.5 >= 0), ('Transitivity__2_0_1_', -1*p_1_0 + 1*p_2_0 + -1*p_2_1 + 1.5 >= 0), ('Transitivity__2_1_0_', -1*p_0_1 + -1*p_2_0 + 1*p_2_1 + 1.5 >= 0), ('_C1', 1*p_0_1 + 1*p_0_2 + 1*p_1_2 + -2 <= 0), ('_C2', 1*p_0_1 + 1*p_2_0 + 1*p_2_1 + -2 <= 0), ('_C3', 1*p_1_0 + 1*p_1_2 + 1*p_2_0 + -2 <= 0)])\n",
-      "[[1. 1. 1.]\n",
-      " [0. 1. 1.]\n",
-      " [0. 0. 1.]]\n",
-      "[[1. 1. 0.]\n",
-      " [0. 1. 0.]\n",
-      " [1. 1. 1.]]\n",
-      "[[1. 0. 0.]\n",
-      " [1. 1. 1.]\n",
-      " [1. 0. 1.]]\n"
+      "OrderedDict([('Weak_preference__0_1_', 1*p_0_1 + 1*p_1_0 + -1 >= 0), ('Incomparability__0_1_', -1*p_0_1 + -1*p_1_0 + 1*z_0_1 + 1 = 0), ('Weak_preference__0_2_', 1*p_0_2 + 1*p_2_0 + -1 >= 0), ('Incomparability__0_2_', -1*p_0_2 + -1*p_2_0 + 1*z_0_2 + 1 = 0), ('Weak_preference__1_0_', 1*p_0_1 + 1*p_1_0 + -1 >= 0), ('Incomparability__1_0_', -1*p_0_1 + -1*p_1_0 + 1*z_1_0 + 1 = 0), ('Weak_preference__1_2_', 1*p_1_2 + 1*p_2_1 + -1 >= 0), ('Incomparability__1_2_', -1*p_1_2 + -1*p_2_1 + 1*z_1_2 + 1 = 0), ('Weak_preference__2_0_', 1*p_0_2 + 1*p_2_0 + -1 >= 0), ('Incomparability__2_0_', -1*p_0_2 + -1*p_2_0 + 1*z_2_0 + 1 = 0), ('Weak_preference__2_1_', 1*p_1_2 + 1*p_2_1 + -1 >= 0), ('Incomparability__2_1_', -1*p_1_2 + -1*p_2_1 + 1*z_2_1 + 1 = 0), ('Transitivity__0_1_2_', 1*p_0_1 + -1*p_0_2 + -1*p_2_1 + 1.5 >= 0), ('Transitivity__0_2_1_', -1*p_0_1 + 1*p_0_2 + -1*p_1_2 + 1.5 >= 0), ('Transitivity__1_0_2_', 1*p_1_0 + -1*p_1_2 + -1*p_2_0 + 1.5 >= 0), ('Transitivity__1_2_0_', -1*p_0_2 + -1*p_1_0 + 1*p_1_2 + 1.5 >= 0), ('Transitivity__2_0_1_', -1*p_1_0 + 1*p_2_0 + -1*p_2_1 + 1.5 >= 0), ('Transitivity__2_1_0_', -1*p_0_1 + -1*p_2_0 + 1*p_2_1 + 1.5 >= 0), ('_C1', 1*p_0_1 + 1*p_0_2 + 1*p_1_2 + -2 <= 0), ('_C2', 1*p_0_1 + 1*p_2_0 + 1*p_2_1 + -2 <= 0), ('_C3', 1*p_1_0 + 1*p_1_2 + 1*p_2_0 + -2 <= 0)])\n"
      ]
     }
    ],
@@ -60,23 +51,20 @@
     "c_simple1 = CredibilityMatrix(simple1)\n",
     "s_simple1 = Score()\n",
     "\n",
-    "r_simple1 = CrispOutranking(c_simple1, s_simple1)\n",
+    "r_simple1 = CrispOutranking(c_simple1, s_simple1, l_simple1)\n",
     "r_simple1.solve(\"complete\", all_results=True)\n",
+    "r_simple1.show_graph(True)\n",
     "\n",
-    "# print(len(r_simple1.results))\n",
-    "# print(r_simple1.problem.objective.value())\n",
-    "\n",
-    "\n",
-    "for idx, r in enumerate(r_simple1.results):\n",
+    "# for idx, r in enumerate(r_simple1.results):\n",
     "    # print(r.constraints)\n",
     "    # o_simple1 = r_simple1.get_outranking(r, \"p\")\n",
-    "    print(r)\n",
+    "    # print(r)\n",
     "    # print(r)\n",
     "\n",
-    "    g_simple1 = Graph(r, l_simple1)\n",
+    "    # g_simple1 = Graph(r, l_simple1)\n",
     "    # g_simple1.G\n",
     "    # print(g_simple1.G)\n",
-    "    g_simple1.show(str(idx))\n",
+    "    # g_simple1.show(str(idx))\n",
     "    # time.sleep(3)\n",
     "# o_simple1 = r_simple1.get_outranking(\"outranking\")\n",
     "\n",
