change visualize file stucture

--- a/examples/tables.ipynb
+++ b/examples/tables.ipynb
@@ -61,111 +61,8 @@
     "\n",
     "print(o_simple2)\n",
     "\n",
-    "t_simple2 = CrispTable(simple2, o_simple2, l_simple2)\n",
-    "t_simple2.draw()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "from matplotlib import pyplot as plt\n",
-    "# from ..types import QuadraticArrayType\n",
-    "from abc import ABC, abstractmethod\n",
-    "\n",
-    "QuadraticArrayType = np.ndarray\n",
-    "\n",
-    "class Table(ABC):\n",
-    "    def __init__(self, src_data: QuadraticArrayType, dest_data: QuadraticArrayType, labels: list[str], title: str = \"\", pos_color: str = \"#00FF00\", neg_color: str = \"FF0000\", **kwargs):\n",
-    "        self.src_data = src_data\n",
-    "        self.dest_data = dest_data.astype(np.int8)\n",
-    "        self.labels = labels\n",
-    "        self.title = title\n",
-    "        self.pos_color = pos_color\n",
-    "        self.neg_color = neg_color\n",
-    "        self.kwargs = kwargs\n",
-    "        self.size = len(self.dest_data)\n",
-    "        self.mask = None\n",
-    "\n",
-    "    @abstractmethod\n",
-    "    def get_mask(self, src_data: QuadraticArrayType, dest_data: QuadraticArrayType) -> QuadraticArrayType:\n",
-    "        pass\n",
-    "\n",
-    "    @abstractmethod\n",
-    "    def get_colors_matrix(self, mask: QuadraticArrayType) -> QuadraticArrayType:\n",
-    "        pass\n",
-    "\n",
-    "    @abstractmethod\n",
-    "    def draw(self):\n",
-    "        pass\n",
-    "        \n",
-    "class CrispTable(Table):\n",
-    "    def __init__(self, src_data: QuadraticArrayType, dest_data: QuadraticArrayType, labels: list[str], title: str = \"\", pos_color: str = \"#00FF00\", neg_color: str = \"#FF0000\", **kwargs):\n",
-    "        super().__init__(src_data, dest_data, labels, title, pos_color, neg_color, **kwargs)\n",
-    "        self.mask = self.get_mask(self.src_data, self.dest_data)\n",
-    "\n",
-    "    def get_mask(self, src_data: QuadraticArrayType, dest_data: QuadraticArrayType) -> QuadraticArrayType:\n",
-    "        mask = np.where(src_data == dest_data, 1, 0)\n",
-    "        np.fill_diagonal(mask, -1)\n",
-    "        mask = mask.astype(int)\n",
-    "        \n",
-    "        return mask\n",
-    "    \n",
-    "    def get_colors_matrix(self, mask: QuadraticArrayType) -> QuadraticArrayType:\n",
-    "        # mask = mask.astype(str)  # Convert mask to integer type\n",
-    "        print(\"XD\")\n",
-    "        print(mask)\n",
-    "        colors = np.zeros(mask.shape, dtype=str)\n",
-    "        # np.fill_diagonal(colors, \"w\")\n",
-    "        print(colors)\n",
-    "        colors = np.where(mask == 1, self.pos_color, colors)  # Swap pos_color and neg_color\n",
-    "        colors = np.where(mask == 0, self.neg_color, colors)  # Swap pos_color and neg_color\n",
-    "        colors = np.where(mask == -1, 'w', colors)  # Swap pos_color and neg_color\n",
-    "        return colors\n",
-    "\n",
-    "    def draw(self):\n",
-    "        colors = self.get_colors_matrix(self.mask)\n",
-    "        _, axs = plt.subplots(2)\n",
-    "\n",
-    "        params = {\n",
-    "            'cellText': self.src_data,\n",
-    "            'cellColours': colors,\n",
-    "            'rowLabels': self.labels,\n",
-    "            'colLabels': self.labels,\n",
-    "            'loc': 'center',\n",
-    "            'rowLoc': 'center',\n",
-    "            'cellLoc': 'center',\n",
-    "            **self.kwargs\n",
-    "        }\n",
-    "\n",
-    "        plt.tight_layout()\n",
-    "        self.__prepare_table(axs[0], params, \"Input Matrix\")\n",
-    "\n",
-    "        params['cellText'] = self.dest_data\n",
-    "        self.__prepare_table(axs[1], params, \"Output Matrix\")\n",
-    "        plt.show()\n",
-    "\n",
-    "    def __prepare_table(self, subplot, params: dict, title: str):\n",
-    "        subplot.axis('tight')\n",
-    "        subplot.axis('off')\n",
-    "\n",
-    "        subplot.set_title(title, fontweight='bold', fontsize=15)\n",
-    "        table = subplot.table(**params)\n",
-    "        table._autoColumns = []\n",
-    "\n",
-    "        for cell in table.get_celld().values():\n",
-    "            cell.set_width(.1)\n",
-    "            cell.set_height(.1) \n",
-    "\n",
-    "def table_factory(table_type: str, **args):\n",
-    "    if table_type == \"crisp\":\n",
-    "        return CrispTable(**args)\n",
-    "    else:\n",
-    "        raise ValueError(f\"Table type {table_type} is not supported.\")"
+    "# t_simple2 = CrispTable(simple2, o_simple2, l_simple2)\n",
+    "# t_simple2.draw()"
    ]
   },
   {
@@ -213,8 +110,8 @@
     "\n",
     "print(o_simple2)\n",
     "\n",
-    "t_simple2 = CrispTable(simple2, o_simple2, l_simple2)\n",
-    "t_simple2.draw()"
+    "# t_simple2 = CrispTable(simple2, o_simple2, l_simple2)\n",
+    "# t_simple2.draw()"
    ]
   },
   {
