--- a/examples/crisp.ipynb
+++ b/examples/crisp.ipynb
@@ -64,6 +64,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 0.]\n",
+      " [1. 1. 0.]\n",
+      " [0. 0. 1.]]\n",
+      "[[1 1 0]\n",
+      " [1 1 0]\n",
+      " [0 0 1]]\n",
+      "['A', 'B', 'C']\n",
+      "defaultdict(<class 'list'>, {1: [A&B, C]})\n",
+      "<mcdalp.core.visualize.graph.graph.Graph object at 0x0000028C4D8DA050>\n"
+     ]
+    }
+   ],
+   "source": [
+    "simple1 = np.array([[1,1,0],[1,1,0],[0,0,1]], dtype=np.int32)\n",
+    "l_simple1 = [\"A\", \"B\", \"C\"]\n",
+    "c_simple1 = CredibilityMatrix(simple1)\n",
+    "s_simple1 = Score()\n",
+    "\n",
+    "r_simple1 = CrispOutranking(c_simple1, s_simple1, l_simple1)\n",
+    "r_simple1.solve(\"partial\", all_results=True)\n",
+    "ranking= r_simple1.get_rankings()\n",
+    "for idx, rank in enumerate(ranking):\n",
+    "    graph = rank.create_graph()\n",
+    "    print(graph)\n",
+    "    graph.show(filename=f\"{idx}_graph\")\n",
+    "# r_simple1.show_graph(True)\n",
+    "# r_simple1.create_table(True)\n",
+    "\n",
+    "# for idx, r in enumerate(r_simple1.results):\n",
+    "    # print(r.constraints)\n",
+    "    # o_simple1 = r_simple1.get_outranking(r, \"p\")\n",
+    "    # print(r)\n",
+    "    # print(r)\n",
+    "\n",
+    "    # g_simple1 = Graph(r, l_simple1)\n",
+    "    # g_simple1.G\n",
+    "    # print(g_simple1.G)\n",
+    "    # g_simple1.show(str(idx))\n",
+    "    # time.sleep(3)\n",
+    "# o_simple1 = r_simple1.get_outranking(\"outranking\")\n",
+    "\n",
+    "# g_simple1 = Graph(o_simple1, l_simple1)\n",
+    "# g_simple1.G"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
